# IOT-FUEL-LEVEL

./: README.md  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json
backend/database/: seed.ts
backend/src/: app.ts  server.ts
frimwere/: .gitattributes  .gitignore  CMakeLists.txt  MQTT_API_Documentation.docx  MQTT_API_Documentation.md  Soji_Sensor_Simulator copy.py  Soji_Sensor_Simulator.py  partitions.csv  sdkconfig  sdkconfig.old  tank_simulator.html
frimwere/DATASHEET/: LIGO_RS485_Protocol_Reference.docx
frimwere/OLD/: SIM7600.c  SIM7600.h  modem_status_monitor.c  modem_status_monitor.h
frimwere/main/: CMakeLists.txt  Setup_mode_button.h  commun_lib.h  idf_component.yml  led_manager.h  main.c  mqtt_manager.h  nvs_manager.h  ota_manager.h  spiffs_manager.h  wifi_manager.h
frimwere/main/Driver_modem/inc/: SIM7600.h  SIM7600_HTTP.h  SIM7600_MQTT.h  SIMCOM_Driver.h  modem_event_handler.h  modem_mqtt_handler.h
frimwere/main/Driver_modem/src/: SIM7600.c  SIM7600_HTTP.c  SIM7600_MQTT.c  SIMCOM_Driver.c  modem_event_handler.c  modem_mqtt_handler.c
frimwere/main/inc/: LOG_Save_SD_Manager.h  Sensor_Fuel_Manager.h  device_config.h  nvs_Manager.h
frimwere/main/src/: LOG_Save_SD_Manager.c  Sensor_Fuel_Manager.c  device_config.c  nvs_manager.c
hardwar/: CP2102N.SchDoc  CPU.SchDoc  Connecteur SIM7000G devbord .SchDoc  Droppy_v1.BomDoc  Droppy_v1.PrjPcb  Droppy_v1.PrjPcbStructure  Job1.OutJob  Main.SchDoc  Power 3v3.SchDoc  RS485.SchDoc  Sensor.SchDoc
mobile/: .gitignore  README.md  app.json  package-lock.json  package.json  pubspec.yaml
(+306 files in other folders)
